--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -81,7 +81,7 @@
                   {% endfor %}
                 {% endif %}
             	  <li><a href= "{% url 'preguntas' %}"> Cargar preguntas </a></li>
-                <li><a href= "{% url 'grupos_home' %}"> Grupos de trabajo </a></li>
+                <li><a href= "{% url 'trabajos_practicos' %}"> Guía de Trabajos Prácticos </a></li>
               </ul>
             </div>
           </div>
