--- a/grupos/templates/grupos/ver_grupo.html
+++ b/grupos/templates/grupos/ver_grupo.html
@@ -13,7 +13,7 @@
 
       {% else %}
         {% if pertenece %}
-          <a class="btn btn-primary btn-xs" href="{% url 'edit_grupo' grupo.pk %}">Editar descripcion del grupo</a>
+          <a class="btn2" href="{% url 'edit_grupo' grupo.pk %}">Editar descripcion del grupo</a>
         {% endif %}
       {% endif %}
     </div>
