--- a/clases/templates/clases/trabajos_practicos.html
+++ b/clases/templates/clases/trabajos_practicos.html
@@ -1,21 +1,28 @@
 {% extends 'base/base.html' %}
 
 {% block content %}
-  <h1> Trabajos prácticos de Procesos Industriales</h1>
-
   <div class="row">
-    {% if perms.clases %}
-      <a class="btn2" href="{% url 'edit_tp' %}">Agregar Trabajo práctico</a>
-    {% endif %}
+    <div class="col-sm-8">
+      <h1 class="inline-title"> Trabajos prácticos de Procesos Industriales</h1>
+    </div>
+    <div class="col-sm-4" id="agregar">
+      {% if perms.clases %}
+        <a class="btn2 inline-title" href="{% url 'edit_tp' %}">Agregar Trabajo práctico</a>
+      {% endif %}
+    </div>
   </div>
 
   {% if trabajos %}
     {% for trabajo in trabajos %}
-      <h3 class="inline-title"> {{ trabajo }} </h3>
-      {% if perms.clases %}
-        <a class="btn1 inline-title" href="{% url 'edit_tp' trabajo.id %}">Editar</a>
-      {% endif %}
-      <p> {{ trabajo.descripcion | safe }} </p>
+      <div class="row">
+        {% if perms.clases %}
+          <a class="btn1 inline-title" href="{% url 'edit_tp' trabajo.id %}">Editar</a>
+        {% endif %}
+        <div class="inline-title">
+          <h3> {{ trabajo }} </h3>
+          <p> {{ trabajo.descripcion | safe }} </p>
+        </div>
+      </div>
     {% endfor %}
   {% endif %}
 
