--- a/base/static/css/base.css
+++ b/base/static/css/base.css
@@ -24,8 +24,8 @@ span {
 }
 
 .btn1 {
-  background-color: #404040;
-  color: white;
+  background-color: #EEEEEE;
+  color: #999999;
   padding: 5px 10px;
   text-align: center;
   border-radius: 4px;
