changed style buttons

--- a/teoria/templates/teoria/add_material.html
+++ b/teoria/templates/teoria/add_material.html
@@ -3,8 +3,8 @@
 {% block content %}
   <form method="POST" class="extended-input">{% csrf_token %}
     {{ material_form.as_p }}
-    <input type="submit" name="save" class="save btn btn-default" value="Cargar"></input>
-    <input type="submit" name="add" class="save btn btn-default" value="Cargar y agregar otra"></input>
+    <input type="submit" name="save" class="btn-dark" value="Cargar"></input>
+    <input type="submit" name="add" class="btn-dark" value="Cargar y agregar nuevo"></input>
 
   </form>
 
