--- a/base/static/css/base.css
+++ b/base/static/css/base.css
@@ -36,6 +36,16 @@ span {
   font-size: 12px;
 }
 
+.relleno {
+  width: 100%;
+  padding: 20px;
+  margin: 10px;
+  background-color: #2980B9;
+  text-align: center;
+  font-size: 20px;
+  color: white
+}
+
 .btn-soft {
   background-color: #EEEEEE;
   color: #999999;
