added gif last year presentation in home

--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -16,7 +16,7 @@
     </a>
   </div>
   <div class="col-sm-6">
-
+    <img class="photo-home" src="https://lh3.googleusercontent.com/hAGqR4NrzkwV_fAFTErUmwG02IYNr684DojoQIYTcETOGe7lAk7l6bvjLNI2vEKS5_uxYWofpkJqKdgbCSdpk5U5DxarPG-m79ScUwHBJhcNHke9TjDQ_Vtj9xoeOOIE6HES0wTjY_xGUn9bR470EIrFLrgLhG4WLpLWbXJBmbxn8uhfw2cHJX4f5fs_auHUj7EkpVbEpzF1hiPxs5K88f1xOiF5g--ar5UOSMWAXERSern24b8cY3MzIwx915e-KM_OXLBqRxOr8pJQx8LV-8_R-FStupL269dbVCXFTL5HwvrLaz4B5m5n9i2yUUXhaqAjPsKbNSPexu9pboF1MbTKkHR3SoN91PgWW9mNKARkWovj6gwoci-7sIGDEfYJyp7AN05j5TElFFfmC9k8KK6k2B2C0ywmzZzQBXlltrRAVSIsBJxXLuwFife5MDgFyZmcelyzOxvlcoR_BVDgHFC-bDhlCIx3MNPnSZ8vnWgS1pqOclSuNMYZZnFq86lVvRmc0aMunRNuHW4iqjVHi5gR6QFoUhjIrR3N6Ti5dYR2p9C-4DF0aHboClx94nFsk1uEw8qLG28Rvb7Gb7X8T6LAQ0-iHHo=w829-h622-no">
       <a href="{% url 'grupos_home' %}">
         <div class="row relleno">
           Ver grupos de trabajo y Trabajos Finales de años anteriores
