material link in teoria now opens in new tab

--- a/teoria/templates/teoria/ver_unidad.html
+++ b/teoria/templates/teoria/ver_unidad.html
@@ -19,7 +19,7 @@
       {% if material %}
         <ol>
           {% for m in material %}
-            <li class="big"><a href="{{ m.link }}" class="dark-link"> {{ m.nombre }} </a><span>Sugerido por: {{ m.autor }}</span></li>
+            <li class="big"><a href="{{ m.link }}" target="_blank" class="dark-link"> {{ m.nombre }} </a><span>Sugerido por: {{ m.autor }}</span></li>
           {% endfor %}
         </ol>
       {% else %}
