--- a/base/static/css/base.css
+++ b/base/static/css/base.css
@@ -29,6 +29,10 @@ a:hover {
   font-size: 18px;
 }
 
+.in-line-preg {
+  display: inline-block;
+}
+
 span {
   font-style: italic;
   font-family: monospace;
