--- a/base/static/css/base.css
+++ b/base/static/css/base.css
@@ -230,6 +230,10 @@ a.menu-button:hover {
   padding-top: 150px;
 }
 
+.body-procesos {
+  padding-left: 5px;
+}
+
 .side-form {
   margin-top: 20px;
 }
@@ -243,7 +247,7 @@ a.menu-button:hover {
 
 /* Retoques a la sidebar */
 #sidebar-wrapper {
-  background-color: #f5f5f5;
+  background-color: #dddddd;
 }
 
 .sidebar-nav li a {
