--- a/clases/templates/clases/clases_home.html
+++ b/clases/templates/clases/clases_home.html
@@ -2,14 +2,12 @@
 
 {% block content %}
   <h1>Clases de Procesos!!</h1>
-  <h3> Acá se van a poder ver indicadores de las clases como: </h3>
-  <ul>
-    <li>Cantidad de preguntas hechas</li>
-    <li>Cantidad de preguntas recibidas</li>
-    <li>Cantidad de mejores preguntas</li>
-    <li>Grupo que normalmente es el último en preguntar</li>
-    <li>Grupo que normalmente es el primero en pregutnar</li>
-  </ul>
+  {% if texts %}
+    {% for text in texts %}
+      {{text | safe}}
+    {% endfor %}
+  {% endif %}
+
 
   <h3>Listado de clases</h3>
   {% if clases %}
