--- a/teoria/templates/teoria/ver_unidad.html
+++ b/teoria/templates/teoria/ver_unidad.html
@@ -6,6 +6,11 @@
       <h1>{{ unidad }}</h1>
     </div>
   </div>
+  {% if texts %}
+    {% for text in texts %}
+      {{text | safe}}
+    {% endfor %}
+  {% endif %}
   <div class="row">
     <a class="btn-soft inline-title" href="{% url 'add_recurso' 'm' %}">
       {% if staff %}
