--- a/teoria/templates/teoria/ver_unidad.html
+++ b/teoria/templates/teoria/ver_unidad.html
@@ -70,29 +70,37 @@
     <h2> Otros recursos sugeridos: </h2>
     <div class="col-sm-6">
       <h3>Material</h3>
-      <ol>
-      {% for mat in material_extra %}
-        <li>
-        {% if request.user.is_staff %}
-          <a href="{% url 'admin:teoria_material_change' mat.pk %}" target="_blank">[x]</a>
-        {% endif %}
-        <a href="{{ mat.link }}" target="_blank" class="dark-link"> {{ mat.nombre }} </a>
-        <span>Sugerido por: {{ mat.autor }}</span></li>
-      {% endfor %}
-      </ol>
+      {% if material_extra %}
+        <ol>
+        {% for mat in material_extra %}
+          <li>
+          {% if request.user.is_staff %}
+            <a href="{% url 'admin:teoria_material_change' mat.pk %}" target="_blank">[x]</a>
+          {% endif %}
+          <a href="{{ mat.link }}" target="_blank" class="dark-link"> {{ mat.nombre }} </a>
+          <span>Sugerido por: {{ mat.autor }}</span></li>
+        {% endfor %}
+        </ol>
+      {% else %}
+        <p>Toavía no hay preguntas sugeridas para esta unidad</p>
+      {% endif %}
     </div>
     <div class="col-sm-6">
       <h3>Preguntas</h3>
-      <ol>
-      {% for preg in preguntas_extra %}
-      <li>
-      {% if request.user.is_staff %}
-        <a href="{% url 'admin:teoria_pregunta_change' preg.pk %}" target="_blank">[x]</a>
+      {% if preguntas_extra %}
+        <ol>
+        {% for preg in preguntas_extra %}
+        <li>
+        {% if request.user.is_staff %}
+          <a href="{% url 'admin:teoria_pregunta_change' preg.pk %}" target="_blank">[x]</a>
+        {% endif %}
+        <p class="in-line-preg"> {{ preg.pregunta }}</p>
+        <span class="in-line-preg">Sugerido por: {{ preg.autor }}</span></li>
+        {% endfor %}
+        </ol>
+      {% else %}
+        <p>Toavía no hay preguntas sugeridas para esta unidad</p>
       {% endif %}
-      <p class="in-line-preg"> {{ preg.pregunta }}</p>
-      <span class="in-line-preg">Sugerido por: {{ preg.autor }}</span></li>
-      {% endfor %}
-      </ol>
     </div>
   </div>
 
