--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -4,6 +4,9 @@
 <html>
   <head>
     <title>LOI Procesos</title>
+    <link rel="icon" href="http://drive.google.com/uc?export=view&id=0B6B1OSj94GfIcVhLQkJMQmxodkE">
+
+
     <link rel="stylesheet" href="{% static 'vendor/css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'vendor/css/bootstrap-theme.min.css' %}">
     <link rel="stylesheet" href="{% static 'vendor/css/bootstrap-datetimepicker.min.css' %}">
@@ -90,12 +93,15 @@
             </div>
 
 
-            <div id="page-content-wrapper" class="body-procesos">
+            <div class="row" id="page-content-wrapper" class="body-procesos">
               {% if warn_base %}
                 <p class="errorlist"> {{ warn_base }} </p>
               {% endif %}
               {% block content %}
               {% endblock %}
+            </div>
+            <div class="row">
+              <p class="foot">Favicon made by <a href="http://www.flaticon.com/authors/egor-rumyantsev" title="Egor Rumyantsev">Egor Rumyantsev</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></p>
             </div>
           </div>
         </div>
